# web-greeter

./: .coafile  .doclets.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  _config.yml  aclocal.m4  autogen.sh  circle.yml  config.h  config.h.in  config.status  configure  configure.ac  index.html  index.md  libtool  lightdm-webkit2-greeter.doap  lightdm.conf  meson.build  meson_options.txt  params.json  requirements.txt  test  web-greeter.doap  whither
.tx/: config
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in  com.antergos.lightdm-webkit2-greeter.appdata.xml  com.antergos.webkit2-greeter.appdata.xml  greeter-resources.gresource.xml  heartbeat.js  lightdm-webkit2-greeter-compton.conf  lightdm-webkit2-greeter-start  lightdm-webkit2-greeter.conf  lightdm-webkit2-greeter.desktop  meson.build
debian/: control  copyright  rules
man/: Makefile.am  lightdm-webkit2-greeter.1  meson.build
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  af.po  ar.po  ar_SA.po  as.po  ast.po  az.po  az@latin.po  az_IR.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_ES.po  es_MX.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_BE.po  gl.po  gu.po  he.po  hi.po  (+50 more)
src/: Makefile  Makefile.am  Makefile.in  config.h  greeter-config.c  greeter-config.h  greeter.c  greeter.gresource.xml  liblightdm-webkit2-greeter-ext.la  liblightdm_webkit2_greeter_ext_la-lightdm-webkit2-greeter-ext.lo  lightdm-webkit2-greeter  lightdm-webkit2-greeter-application-3.20.css  lightdm-webkit2-greeter-application.css  lightdm-webkit2-greeter-ext.c  lightdm-webkit2-greeter.c  meson.build  webkit2-extension.c
src/.deps/: liblightdm_webkit2_greeter_ext_la-lightdm-webkit2-greeter-ext.Plo  lightdm_webkit2_greeter-lightdm-webkit2-greeter.Po
src/.libs/: liblightdm-webkit2-greeter-ext.la  liblightdm-webkit2-greeter-ext.lai
src/gresource/: greeter-resources.c  greeter-resources.gresource.xml  greeter-resources.h  greeter-style-css.c  greeter-style-css.h  meson.build
src/gresource/css/: style.css
src/gresource/js/: Greeter.js  GreeterConfig.js  GreeterUtils.js  LightDMObjects.js  ThemeHeartbeat.js  ThemeUtils.js  WK2Greeter.js  auto-binding-object.js  heartbeat.js  proxy.js
src/gresource/js/_vendor/: moment-with-locales.min.js
src/gresource/js/base/: LightDMGreeter.js
src/js/: heartbeat.js
themes/: Makefile  Makefile.am  Makefile.in  meson.build
themes/_vendor/: Makefile.am
themes/_vendor/css/: Makefile.am  bootswatch-paper.bootstrap.min.css
themes/_vendor/fonts/: Makefile.am
themes/_vendor/fonts/TTF/: Makefile.am
themes/_vendor/fonts/font-awesome/: Makefile.am  font-awesome.min.css
themes/_vendor/js/: Makefile.am  bootstrap.min.js  jquery.min.js  js.cookie.min.js  mock.js
themes/antergos/: .babelrc  .gitignore  Makefile.am  README.md  README.textile  index.html  index.theme  package.json
themes/antergos/.tx/: combine_translations.js  config
themes/antergos/css/: Makefile.am  style.css
themes/antergos/css/bootstrap/: Makefile.am  bootstrap.min.css  prettify.css  theme.css
themes/antergos/css/lib/: Makefile.am  font-awesome.css
themes/antergos/font-awesome/: Makefile.am
themes/antergos/font-awesome/css/: Makefile.am
themes/antergos/font-awesome/fonts/: Makefile.am
themes/antergos/fonts/TTF/: Makefile.am
themes/antergos/fonts/font-awesome/: Makefile.am  font-awesome.min.css
themes/antergos/i18n/: af.json  ar.json  be.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  eo.json  es.json  et.json  eu.json  fa.json  fi.json  gl.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  ka.json  ko.json  lt.json  mk.json  mr.json  ms.json  nl.json  pa.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sr.json  sv.json  (+8 more)
themes/antergos/img/: Makefile.am
themes/antergos/img/thumbs/: Makefile.am
themes/antergos/js/: Makefile.am  bootstrap.js  greeter-compiled.js  greeter-compiled.js.map  greeter.js  greeting_translations.js  mock.js  translations.js
themes/default/: README.md  index.html  index.theme
themes/default/.tx/: combine_translations.js
themes/default/css/: style.css
themes/default/i18n/: az.json  be.json  bg.json  en.json  fr.json  lt.json  ms.json  nb.json  pl.json  ta.json  tg.json  tr.json  translations.json  zh.json
themes/default/js/: greeter.js
themes/simple/: Makefile.am  index.html  index.theme
themes/tools/: Makefile.am
themes/webkit/: Makefile  Makefile.in  index.html  index.theme
web-greeter/: greeter.py  interceptor.py  meson.build  whither.yml
web-greeter/bridge/: Config.py  Greeter.py  ThemeUtils.py  __init__.py
web-greeter/resources/: resources.qrc
web-greeter/resources/css/: style.css
web-greeter/resources/js/: ThemeUtils.js  bootstrap.js
web-greeter/resources/js/_vendor/: moment-with-locales.min.js
web-greeter/resources/js/docs/: Greeter.js  GreeterConfig.js  LightDMObjects.js
web-greeter/utils/: interceptor.py  pkg_json.py  theme.py
