etcdir = /etc/lightdm/
etc_DATA = lightdm-webkit2-greeter.conf

launcherdir = $(bindir)
launcher_DATA = lightdm-webkit2-greeter-start

desktopdir = $(DESKTOP_DIR)
desktop_DATA = lightdm-webkit2-greeter.desktop

EXTRA_DIST = \
	$(etc_DATA) \
	$(desktop_DATA) \
	$(launcher_DATA)

DISTCLEANFILES = \
	Makefile.in
