fafontsdir = $(THEME_DIR)/antergos/font-awesome/fonts
fafonts_DATA = \
	FontAwesome.otf \
	fontawesome-webfont.ttf \
	Lato-Light.ttf \
	fontawesome-webfont.eot \
	fontawesome-webfont.woff \
	Lato-Regular.ttf \
	fontawesome-webfont.svg \
	fontawesome-webfont.woff2

EXTRA_DIST = $(fafonts_DATA)

DISTCLEANFILES = \
	Makefile.in