thumbsdir = $(THEME_DIR)/antergos/img/thumbs
thumbs_DATA = \
	83II_by_bo0xVn.jpg \
	antergos-wallpaper.png \
	as_time_goes_by____by_moskanon-d5dgvt8.jpg \
	autumn_hike___plant_details_by_aoiban-d5l7y83.jpg \
	blossom_by_snipes2.jpg \
	c65sk3mshowxrtlljbvh.jpg \
	early_morning_by_kylekc.jpg \
	extinction_by_signcropstealer-d5j4y84.jpg \
	field_by_stevenfields-d59ap2i.jpg \
	Grass_by_masha_darkelf666.jpg \
	Grass_Fullscreen.jpg \
	humble_by_splendidofsun-d5g47hb.jpg \
	In_the_Grass.jpg \
	morning_light.jpg \
	Nautilus_Fullscreen.jpg \
	nikon_d40.jpg \
	sky_full_of_stars.jpg \
	solely_by_stevenfields.jpg \
	the_world_inside_my_lens__by_moskanon-d5fsiqs.jpg \
	white_line_by_snipes2.jpg


EXTRA_DIST = $(thumbs_DATA)

DISTCLEANFILES = \
	Makefile.in